[package]
name = "embassy-nrf-pwm-power"
version = "0.1.0"
edition = "2024"

[features]
no-pwm = []
no-modem = []

[dependencies]
cortex-m-rt = "0.7.0"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
embassy-executor = { version = "0.9.1", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { version = "0.1.2" }
embassy-nrf = { version = "0.8.0", features = ["defmt", "nrf9160-s", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
nrf-modem = { version = "0.9.2", features = ["defmt", "nrf9160"] }
tinyrlibc = "0.5.1"

[profile.release]
lto = true
debug = 2
